# python-boilerplates

django_boilerplate/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
django_boilerplate/src/myapp/: views.py
django_boilerplate/src/myapp/templates/: index.html
django_boilerplate/src/myapp/tests/: test_models.py
django_boilerplate/src/webapp/: settings.py  urls.py
fastapi_boilerplate/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
fastapi_boilerplate/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
fastapi_boilerplate/fission_project_template/: __init__.py  __main__.py  conftest.py  settings.py
fastapi_boilerplate/fission_project_template/db/: base.py  utils.py
fastapi_boilerplate/fission_project_template/db/models/: __init__.py
fastapi_boilerplate/fission_project_template/services/: __init__.py
fastapi_boilerplate/fission_project_template/tests/: __init__.py  test_demo_app.py
fastapi_boilerplate/fission_project_template/web/: __init__.py  application.py  lifetime.py
fastapi_boilerplate/fission_project_template/web/api/: __init__.py  router.py
fastapi_boilerplate/fission_project_template/web/api/demo_app/: __init__.py  views.py
fastapi_boilerplate/fission_project_template/web/api/monitoring/: __init__.py  views.py
flask_boilerplate/: README.md
