[tool.poetry]
name = "fission_django_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
black = "^23.1.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
